--- a/index.html
+++ b/index.html
@@ -16,21 +16,18 @@
     </header>
 
     <div class="row mt-2">
-        <div class="col text-center">
-            <button class="btn btn-danger">Nuevo Juego</button>
-            <button class="btn btn-primary">Pedir Carta</button>
-            <button class="btn btn-primary">Detener</button>
+        <div id="botones" class="col text-center">
+            <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir Carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
         </div>
     </div>
 
     <div class="row container">
         <div class="col">
-            <h1>Jugador 1 - <small>0</small> </h1>
+            <h1 id='nombre-jugador' >Jugador 1 - <small>0</small> </h1>
             <div id="jugador-cartas">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
+                <!-- <img class="carta" src="assets/cartas/2C.png" alt=""> -->
             </div>
         </div>
     </div>
@@ -39,10 +36,7 @@
         <div class="col">
             <h1>Computadora - <small>0</small> </h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/3C.png" alt="">
-                <img class="carta" src="assets/cartas/3C.png" alt="">
-                <img class="carta" src="assets/cartas/3C.png" alt="">
-                <img class="carta" src="assets/cartas/3C.png" alt="">
+                <!-- <img class="carta" src="assets/cartas/3C.png" alt=""> -->
             </div>
         </div>
     </div>
